mvp: edit swagger notation again
